Landing page changes

--- a/client/app/landing/corefeatures.html
+++ b/client/app/landing/corefeatures.html
@@ -19,8 +19,25 @@
 
   <div class="row featurette">
     <div class="col-sm-5 col-xs-12 col-md-5 col-lg-5">
-      <img class="img-responsive center-block square roommatesPicture" src="./../assets/images/values/roomDetail.png" alt="Rooms">
+      <img class="img-responsive center-block square roommatesPicture" src="./../assets/images/values/heatmap.png" alt="Heatmap">
     </div>
+    <div class="col-sm-7 col-xs-12 col-md-7 col-lg-7">
+      <h2 class="featurette-heading">Connect with other students. <span class="text-muted">Around you.</span></h2>
+      <ul class="icon-list">
+        <li><i class="fa fa-bubbles4 fa-lg"></i>&nbsp;&nbsp;Meet new students around you
+          <ul class="icon-list">
+            <li><i class="fa fa-lock3 fa-lg"></i>&nbsp;&nbsp;Address is not shared and always private</li>
+          </ul>
+        </li>
+        <li><i class="fa fa-bubble-heart fa-lg"></i>&nbsp;&nbsp;Learn about your area and safe neighborhoods</li>
+        <li><i class="fa fa-smiley2 fa-lg"></i>&nbsp;&nbsp;Get the most out of living off-campus</li>
+      </ul>
+    </div>
+  </div>
+
+  <hr class="featurette-divider">
+
+  <div class="row featurette">
     <div class="col-sm-7 col-xs-12 col-md-7 col-lg-7">
       <h2 class="featurette-heading">Search available rooms. <span class="text-muted">Look for roommates.</span></h2>
       <ul class="icon-list">
@@ -37,25 +54,9 @@
         <li><img class="icons" src="./../assets/images/mini-icons/heart6.svg" />Follow a property</li>
       </ul>
     </div>
-  </div>
-
-  <hr class="featurette-divider">
-
-  <div class="row featurette">
-    <div class="col-sm-7 col-xs-12 col-md-7 col-lg-7">
-      <h2 class="featurette-heading">Connect with other students. <span class="text-muted">Around you.</span><sup style="font-size: 40%; top: -1em;">(Coming Soon)</sup></h2>
-      <ul class="icon-list">
-        <li><i class="fa fa-bubbles4 fa-lg"></i>&nbsp;&nbsp;Meet new students around you
-          <ul class="icon-list">
-            <li><i class="fa fa-lock3 fa-lg"></i>&nbsp;&nbsp;Address is not shared and always private</li>
-          </ul>
-        </li>
-        <li><i class="fa fa-bubble-heart fa-lg"></i>&nbsp;&nbsp;Learn about your area and safe neighborhoods</li>
-        <li><i class="fa fa-smiley2 fa-lg"></i>&nbsp;&nbsp;Get the most out of living off-campus</li>
-      </ul>
-    </div>
     <div class="col-sm-5 col-xs-12 col-md-5 col-lg-5">
-      <img class="img-responsive center-block square roommatesPicture" src="./../assets/images/values/heatmap.png" alt="Heatmap">
+      <img class="img-responsive center-block square roommatesPicture" src="./../assets/images/values/roomDetail.png" alt="Rooms">
     </div>
   </div>
+
 </div> <!-- /END THE FEATURETTES -->
