--- a/client/app/landing/jumbotron.html
+++ b/client/app/landing/jumbotron.html
@@ -15,7 +15,7 @@
     </div>
     <div class="row  text-center lead-btn">
       <div class="col-sm-12 col-xs-12 col-md-12 col-lg-12">
-        <a class="btn btn-rented-large primary" ui-sref="signup" role="button">Get Started For Free</a>
+        <a class="btn btn-rented-large primary" ui-sref="signup" role="button">Sign Up for Free</a>
       </div>
     </div>
 
