--- a/client/app/landing/valueicons.html
+++ b/client/app/landing/valueicons.html
@@ -8,7 +8,7 @@
 
     <div class="col-sm-4 col-xs-12 col-md-4 col-lg-4">
       <i class="fa fa-search-plus fa-5x"></i>
-      <h2>Off-campus housing</h2>
+      <h2>Off-campus</h2>
     </div><!-- /.col-sm-4 -->
 
     <div class="col-sm-4 col-xs-12 col-md-4 col-lg-4">
