--- a/client/app/dashboard/around.you.html
+++ b/client/app/dashboard/around.you.html
@@ -1,4 +1,4 @@
-<h2 class="section-title">Students Around You <small>(within 1 mile)</small></h2>
+<h2>Students Around You <small>(within 1 mile)</small></h2>
 <!--<input class="pull-right" type="range" name="points" min="1" max="5" step="1" style="position: relative; width: 200px;"/>-->
 <div class="white-box">
   <h3 ng-if="!dashboard.aroundYou.length && dashboard.address.streetAddress.id">
