--- a/client/app/dashboard/my-profile/edit-looking/edit.looking.html
+++ b/client/app/dashboard/my-profile/edit-looking/edit.looking.html
@@ -129,7 +129,7 @@
             </div>
           </div>
           <div class="col-xs-9 col-sm-7 input-post">
-            <label for="parkingNeeded">Meet new roommates?</label><br/>
+            <label for="openToFullYearLeaseNewRoomates">Meet new roommates?</label><br/>
             <select
               ng-options="option.value as option.text for option in editLooking.ddlYesNoSelect"
               id="openToFullYearLeaseNewRoomates" class="form-control" ng-model="editLooking.tempLooking.openToFullYearLeaseNewRoomates">
