--- a/client/app/aroundYou/around.you.html
+++ b/client/app/aroundYou/around.you.html
@@ -46,7 +46,7 @@
                         <h4 class="media-heading user-name" style="text-align: center; padding: 20px">
                           {{arYou.firstname}} {{arYou.lastname[0] | uppercase}}.
                         </h4>
-                        <div style="font-size: 0.9em; text-align: center">
+                        <div style="font-size: 0.9em; text-align: center;min-height: 60px">
                           <dl>
                             <dd ng-show="arYou.usereducationUsers[0].educationCenterName">{{arYou.usereducationUsers[0].educationCenterName}}</dd>
                             <dd ng-hide="arYou.usereducationUsers[0].educationCenterName">No university entered</dd>
