unfinished settings view, adding use strict to be consisted, prepull

--- a/client/index.html
+++ b/client/index.html
@@ -111,6 +111,7 @@
           <script src="app/account/account.routes.js"></script>
           <script src="app/account/login/login.controller.js"></script>
           <script src="app/account/login/login.route.js"></script>
+          <script src="app/account/settings/settings.controller.js"></script>
           <script src="app/account/signup/signup.controller.js"></script>
           <script src="app/admin/admin.controller.js"></script>
           <script src="app/admin/admin.js"></script>
