--- a/client/app/aroundYou/around.you.html
+++ b/client/app/aroundYou/around.you.html
@@ -56,8 +56,14 @@
                           </dl>
                         </div>
                         <div style="text-align: center; display: inline-block;width: 100%;">
-                          <a ng-href="{{arYou.facebook}}" ng-if="arYou.facebook" target="_blank"><i class="fa fa-facebook-square fa-2x facebookAroundYou"></i></a>
-                          <a ng-href="mailto:{{arYou.email}}?Subject=Hello"><i class="fa fa-envelope fa-2x"></i></a>
+                          <a id="facebookPM" ng-href="{{arYou.facebook}}" ng-if="arYou.facebook" target="_blank"><i class="fa fa-facebook-square fa-2x facebookAroundYou"></i></a>
+                          <script type="text/javascript">
+                            mixpanel.track_links("#facebookPM", "Facebook PM sent - around you");
+                          </script>
+                          <a id="email" ng-href="mailto:{{arYou.email}}?Subject=Hello"><i class="fa fa-envelope fa-2x"></i></a>
+                          <script type="text/javascript">
+                            mixpanel.track_links("#email", "Email sent - around you");
+                          </script>
                         </div>
                       </div>
 
