--- a/client/app/dashboard/around.you.html
+++ b/client/app/dashboard/around.you.html
@@ -33,8 +33,14 @@
             </div>
           </div>
       <div style="text-align: center;width: 100%;">
-          <a ng-href="{{around.facebook}}" ng-if="around.facebook" target="_blank"><i class="fa fa-facebook-square fa-2x facebookAroundYou"></i></a>
-          <a ng-href="mailto:{{around.email}}?Subject=Hello"><i class="fa fa-envelope fa-2x"></i></a>
+          <a id="facebookPM" ng-href="{{around.facebook}}" ng-if="around.facebook" target="_blank"><i class="fa fa-facebook-square fa-2x facebookAroundYou"></i></a>
+          <script type="text/javascript">
+            mixpanel.track_links("#facebookPM", "Facebook PM sent - around you");
+          </script>
+          <a id="email" ng-href="mailto:{{around.email}}?Subject=Hello"><i class="fa fa-envelope fa-2x"></i></a>
+          <script type="text/javascript">
+            mixpanel.track_links("#email", "Email sent - around you");
+          </script>
       </div>
     </div>
   </slick>
