--- a/client/app/rooms/searchCriteria.html
+++ b/client/app/rooms/searchCriteria.html
@@ -29,7 +29,7 @@
           </div>
         </div>
         <div class="col-xs-9 col-sm-7 input-post">
-          <a ui-sref="editProfile">Set your campus to search by distance</a>
+          <a ui-sref="editProfile({focus:'updateEducation'})">Set your campus to search by distance</a>
         </div>
       </div>
 
