--- a/client/app/account/settings/settings.html
+++ b/client/app/account/settings/settings.html
@@ -9,34 +9,39 @@
     <h2>Settings</h2>
 
     <div class="white-box">
-      <div class="form-group input-post">
-        <label for="dailyUpdate">Receive daily update e-mail?</label>
-        <select
-          ng-options="option.value as option.text for option in settings.ddlYesNoSelect"
-          id="dailyUpdate" class="form-control" ng-model="settings.tempMe.shareCreditReport">
-        </select>
-      </div>
+      <div class="row">
+        <div class="col-md-6">
 
-      <div class="form-group input-post">
-        <label for="allowAroundMe">Allow students around me to connect?</label>
-        <select
-          ng-options="option.value as option.text for option in settings.ddlYesNoSelect"
-          id="allowAroundMe" class="form-control" ng-model="settings.tempMe.shareProfile">
-        </select>
-      </div>
+          <div class="form-group input-post">
+            <label for="dailyUpdate">Receive daily update e-mail?</label>
+            <select
+              ng-options="option.value as option.text for option in settings.ddlYesNoSelect"
+              id="dailyUpdate" class="form-control" ng-model="settings.tempMe.shareCreditReport">
+            </select>
+          </div>
 
-      <div class="form-group input-post">
-        <label for="userSearchRadius">Search distance</label>
-        <select id="userSearchRadius" name="userSearchRadius" class="form-control" ng-model="settings.tempMe.experianIdToken">
-          <option value="1">1 mile</option>
-          <option value="3">3 miles</option>
-          <option value="7">7 miles</option>
-        </select>
-      </div>
+          <div class="form-group input-post">
+            <label for="allowAroundMe">Allow students around me to connect?</label>
+            <select
+              ng-options="option.value as option.text for option in settings.ddlYesNoSelect"
+              id="allowAroundMe" class="form-control" ng-model="settings.tempMe.shareProfile">
+            </select>
+          </div>
+
+          <div class="form-group input-post">
+            <label for="userSearchRadius">Search distance</label>
+            <select id="userSearchRadius" name="userSearchRadius" class="form-control" ng-model="settings.tempMe.experianIdToken">
+              <option value="1">1 mile</option>
+              <option value="3">3 miles</option>
+              <option value="7">7 miles</option>
+            </select>
+          </div>
+
+       </div>
+     </div>
     </div>
     <br/>
-    <button ng-click="settings.changeSettings(settings.tempMe)" class="btn btn-primary pull-right">Save</button>
+    <button ng-click="settings.changeSettings(settings.tempMe)" class="btn-rented-medium primary pull-right">Save</button>
 
   </div>
-
 </div>
