--- a/client/app/dashboard/my-profile/edit-profile/edit.profile.html
+++ b/client/app/dashboard/my-profile/edit-profile/edit.profile.html
@@ -70,7 +70,7 @@
       <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
         <div class="row">
           <div class="col-xs-12 col-sm-7 col-md-7 col-lg-7 col-sm-offset-3 col-md-offset-3 col-lg-offset-3">
-            <p>University, major, and graduation dates are helpful in finding roommates or other students around you.<br><br></p>
+            <p id="scrollEducation">University, major, and graduation dates are helpful in finding roommates or other students around you.<br><br></p>
             <div class="form-group input-post">
               <label for="educationCenterName">University name</label>
               <select id="educationCenterName" class="form-control" required name="universityName"
@@ -126,7 +126,7 @@
 
           <div class="col-xs-12 col-sm-7 col-md-7 col-lg-7 col-sm-offset-3 col-md-offset-3 col-lg-offset-3">
 
-            <p>Current address helps you meet new students around you for carpooling, events, etc.<br>Your address is NOT shared with anyone and kept private.<br><br></p>
+            <p id="scrollAddress">Current address helps you meet new students around you for carpooling, events, etc.<br>Your address is NOT shared with anyone and kept private.<br><br></p>
             <div class="form-group input-post">
 
               <label for="streetAddress">Address lookup</label>
