--- a/client/app/dashboard/my-profile/add-looking/new.looking.html
+++ b/client/app/dashboard/my-profile/add-looking/new.looking.html
@@ -23,7 +23,7 @@
             </div>
           </div>
           <div class="col-xs-9 col-sm-7 input-post">
-            <label>Your campus</label><br/>
+            <label>Your campus</label><sup class="asterisk">*</sup>
             <p><small>{{newLooking.education.educationCenterName.name}}</small></p>
           </div>
         </div>
@@ -37,7 +37,7 @@
             </div>
           </div>
           <div class="col-xs-9 col-sm-7 input-post">
-            <label for="yourCampusNotPresent">Your campus</label><br/>
+            <label for="yourCampusNotPresent">Your campus</label><sup class="asterisk">*</sup>
             <select id="yourCampusNotPresent" class="form-control" required name="yourCampusNotPresent"
                     ng-class="{'educationError': newLookingForm.yourCampusNotPresent.$error.required && newLooking.submitted}"
                     data-ng-model="newLooking.education.educationCenterName"
@@ -55,7 +55,7 @@
             </div>
           </div>
           <div class="col-xs-9 col-sm-7 input-post">
-            <label for="moveInDate">Move-in date</label>
+            <label for="moveInDate">Move-in date<sup class="asterisk">*</sup></label>
             <p class="input-group">
               <input type="text" id="moveInDate" name="moveInDate" class="form-control borderRadiusFix" datepicker-popup="{{format}}" ng-model="newLooking.tempLooking.moveInDate" is-open="datePickers.startDate" close-text="Close" required ng-class="{'educationError': newLookingForm.moveInDate.$invalid && newLooking.submitted}"/>
                       <span class="input-group-btn">
@@ -76,7 +76,7 @@
           <div class="col-xs-9 col-sm-7 input-post">
             <label for="moveOutDate">Move-out date</label>
             <p class="input-group">
-              <input type="text" id="moveOutDate" name="moveOutDate" class="form-control borderRadiusFix" datepicker-popup="{{format}}" ng-model="newLooking.tempLooking.moveOutDate" is-open="datePickers.endDate" close-text="Close" required ng-class="{'educationError': newLookingForm.moveOutDate.$invalid && newLooking.submitted}"/>
+              <input type="text" id="moveOutDate" name="moveOutDate" class="form-control borderRadiusFix" datepicker-popup="{{format}}" ng-model="newLooking.tempLooking.moveOutDate" is-open="datePickers.endDate" close-text="Close" ng-class="{'educationError': newLookingForm.moveOutDate.$invalid && newLooking.submitted}"/>
                           <span class="input-group-btn">
                             <button type="button" class="btn btn-default" ng-click="open($event,'endDate')"><i class="glyphicon glyphicon-calendar"></i></button>
                           </span>
@@ -93,7 +93,7 @@
           </div>
         </div>
         <div class="col-xs-9 col-sm-7 input-post">
-          <label for="maxMonthlyRent">Max monthly rent ($)</label>
+          <label for="maxMonthlyRent">Max monthly rent ($)</label><sup class="asterisk">*</sup>
           <input type="number" min="0" id="maxMonthlyRent" name="maxMonthlyRent" class="form-control"  placeholder="e.x. 500" ng-model="newLooking.tempLooking.maxMonthlyRent" required ng-class="{'educationError': newLookingForm.maxMonthlyRent.$invalid && newLooking.submitted}"/>
         </div>
 
@@ -108,7 +108,7 @@
           </div>
         </div>
         <div class="col-xs-9 col-sm-7 input-post">
-          <label for="utilitiesIncluded">Utilities included?</label><br/>
+          <label for="utilitiesIncluded">Utilities included?</label><sup class="asterisk">*</sup>
           <select id="utilitiesIncluded" name="utilities" class="form-control" ng-model="newLooking.tempLooking.utilitiesIncluded" required ng-class="{'educationError': newLookingForm.utilities.$invalid && newLooking.submitted}">
             <option value="true">Yes</option>
             <option value="false">No</option>
@@ -131,7 +131,7 @@
            </div>
          </div>
          <div class="col-xs-9 col-sm-7 input-post">
-           <label for="numRoommates">Max no. of roommates</label>
+           <label for="numRoommates">Max no. of roommates</label><sup class="asterisk">*</sup>
            <input type="number" min="0" max="10" id="numRoommates" name="numRoommates" class="form-control"  placeholder="e.x. 3 (max: 10)" ng-model="newLooking.tempLooking.numRoommates" required ng-class="{'educationError': newLookingForm.numRoommates.$invalid && newLooking.submitted}"/>
          </div>
        </div>
@@ -145,7 +145,7 @@
            </div>
          </div>
          <div class="col-xs-9 col-sm-7 input-post">
-           <label for="openToFullYearLeaseNewRoomates">Meet new roommates?</label><br/>
+           <label for="openToFullYearLeaseNewRoomates">Meet new roommates?</label><sup class="asterisk">*</sup>
            <select id="openToFullYearLeaseNewRoomates" name="meetNew" class="form-control" ng-model="newLooking.tempLooking.openToFullYearLeaseNewRoomates" required ng-class="{'educationError': newLookingForm.meetNew.$invalid && newLooking.submitted}">
              <option value="true">Yes</option>
              <option value="false">No</option>
@@ -162,7 +162,7 @@
            </div>
          </div>
          <div class="col-xs-9 col-sm-7 input-post">
-           <label for="gender">Gender preference</label>
+           <label for="gender">Gender preference</label><sup class="asterisk">*</sup>
            <select id="gender" name="gender" class="form-control" ng-model="newLooking.tempLooking.gender" required ng-class="{'educationError': newLookingForm.gender.$invalid && newLooking.submitted}">
              <option value="male only">Male only</option>
              <option value="female only">Female only</option>
@@ -180,7 +180,7 @@
            </div>
          </div>
          <div class="col-xs-9 col-sm-7 input-post">
-           <label for="parkingNeeded">Parking included?</label><br/>
+           <label for="parkingNeeded">Parking included?</label><sup class="asterisk">*</sup>
            <select id="parkingNeeded" class="form-control" name="parking" ng-model="newLooking.tempLooking.parkingNeeded" required ng-class="{'educationError': newLookingForm.parking.$invalid && newLooking.submitted}">
              <option value="true">Yes</option>
              <option value="false">No</option>
@@ -197,8 +197,8 @@
            </div>
          </div>
          <div class="col-xs-9 col-sm-7 input-post">
-           <label for="busRouteRequired">Near bus lines?</label><br/>
-           <select id="busRouteRequired" class="form-control" name="bus" ng-model="newLooking.tempLooking.busRouteRequired" required ng-class="{'educationError': newLookingForm.bus.$invalid && newLooking.submitted}">
+           <label for="busRouteRequired">Near bus lines?</label>
+           <select id="busRouteRequired" class="form-control" name="bus" ng-model="newLooking.tempLooking.busRouteRequired" ng-class="{'educationError': newLookingForm.bus.$invalid && newLooking.submitted}">
              <option value="true">Yes</option>
              <option value="false">No</option>
            </select>
@@ -220,7 +220,7 @@
           </div>
         </div>
         <div class="col-xs-9 col-sm-7 input-post">
-          <label for="sharedBathroom">Shared bathroom?</label><br/>
+          <label for="sharedBathroom">Shared bathroom?</label><sup class="asterisk">*</sup>
           <select id="sharedBathroom" name="bath" class="form-control" ng-model="newLooking.tempLooking.sharedBathroom" required ng-class="{'educationError': newLookingForm.bath.$invalid && newLooking.submitted}">
             <option value="true">Yes</option>
             <option value="false">No</option>
@@ -237,7 +237,7 @@
           </div>
         </div>
         <div class="col-xs-9 col-sm-7 input-post">
-          <label for="roomType">Room preference</label>
+          <label for="roomType">Room preference</label><sup class="asterisk">*</sup>
           <select id="roomType" class="form-control" name="type" ng-model="newLooking.tempLooking.roomType" required ng-class="{'educationError': newLookingForm.type.$invalid && newLooking.submitted}">
             <option value="single">Single</option>
             <option value="double">Double</option>
@@ -255,7 +255,7 @@
           </div>
         </div>
         <div class="col-xs-9 col-sm-7 input-post">
-          <label for="furnished">Furnished?</label><br/>
+          <label for="furnished">Furnished?</label><sup class="asterisk">*</sup>
           <select id="furnished" class="form-control" name="furnished" ng-model="newLooking.tempLooking.furnished" required ng-class="{'educationError': newLookingForm.furnished.$invalid && newLooking.submitted}">
             <option value="true">Yes</option>
             <option value="false">No</option>
@@ -272,7 +272,7 @@
           </div>
         </div>
         <div class="col-xs-9 col-sm-7 input-post">
-          <label for="smokingAllowed">Smoking allowed?</label><br/>
+          <label for="smokingAllowed">Smoking allowed?</label><sup class="asterisk">*</sup>
           <select id="smokingAllowed" class="form-control" name="smoking" ng-model="newLooking.tempLooking.smokingAllowed" required ng-class="{'educationError': newLookingForm.smoking.$invalid && newLooking.submitted}">
             <option value="true">Yes</option>
             <option value="false">No</option>
@@ -289,7 +289,7 @@
           </div>
         </div>
         <div class="col-xs-9 col-sm-7 input-post">
-          <label for="petsAllowed">Pets allowed?</label><br/>
+          <label for="petsAllowed">Pets allowed?</label><sup class="asterisk">*</sup>
           <select id="petsAllowed" class="form-control" name="pets" ng-model="newLooking.tempLooking.petsAllowed" required ng-class="{'educationError': newLookingForm.pets.$invalid && newLooking.submitted}">
             <option value="true">Yes</option>
             <option value="false">No</option>
@@ -305,7 +305,8 @@
 
       <div class="row post-padding">
         <div class="col-xs-11 col-sm-11 input-post">
-          <textarea name="area" id="area" cols="60" rows="3" ng-model="newLooking.tempLooking.area"  class="form-control" placeholder="Enter looking post details (optional)"></textarea><br/>
+          <textarea name="area" id="area" cols="60" rows="3" ng-model="newLooking.tempLooking.area"  class="form-control" placeholder="Enter looking post details (optional)"></textarea>
+          <p class="col-xs-offset-1 col-sm-offset-1"><br><sup class="asterisk">*</sup>required fields - makes searching your post faster</p>
         </div>
       </div>
 
