--- a/client/app/dashboard/dashboard.html
+++ b/client/app/dashboard/dashboard.html
@@ -31,7 +31,7 @@
             <ul style="list-style: none">
               Any improvements?
               <li><i class="fa fa-envelope"></i>&nbsp;&nbsp;<a href="mailto:feedback@campusly.org?=Website%20Feedback">feedback@campusly.org</a></li>
-              <!--<li><i class="fa fa-facebook-square"></i>&nbsp;&nbsp;<a href="https://facebook.com/modivinit" target="_blank">Facebook PM</a></li>-->
+              <li><i class="fa fa-facebook-square"></i>&nbsp;&nbsp;<a href="https://www.facebook.com/app_scoped_user_id/837190803015531/" target="_blank">Facebook PM</a></li>
             </ul>
           </div>
 
