--- a/client/app/aroundYou/around.you.html
+++ b/client/app/aroundYou/around.you.html
@@ -9,7 +9,8 @@
       <div class="row">
         <div class="page-header col-xs-12 col-sm-12 col-md-12 col-lg-12">
           <h2 style="display: inline">Students Around You <small>(within {{around.me.experianIdToken}} mile)</small></h2>
-          <a ui-sref="settings({focus:'radius'})" >change radius</a>
+          <!--TODO commenting out until we decide to allow user to change distance-->
+          <!--<a ui-sref="settings({focus:'radius'})" >change radius</a>-->
         </div>
       </div>
 
